# cfgcut

./: .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml  deny.toml  dist-workspace.toml  mise.toml
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: config.yml  parser_bug.yaml  platform_request.yaml
.github/workflows/: ci.yml  python-release.yml  release.yml  zizmor.yml
crates/cfgcut/: Cargo.toml
crates/cfgcut/benches/: match.rs
crates/cfgcut/src/: anonymize.rs  inline_match.rs  lib.rs  main.rs
crates/cfgcut/src/dialect/: indent.rs
crates/cfgcut/tests/: cli_help.rs  inline_matches.rs  match_basic.rs  match_expectations.rs  match_extended.rs  match_snapshots.rs  render_order.rs
crates/cfgcut/tests/snapshots/: match_snapshots__ios_bgp_block.snap  match_snapshots__ios_gig0_0_subtree.snap  match_snapshots__ios_gig0_1_switchport.snap  match_snapshots__ios_hostname.snap  match_snapshots__ios_policy_map.snap  match_snapshots__ios_vty.snap  match_snapshots__junos_bgp_group.snap  match_snapshots__junos_ge_0_0_0.snap  match_snapshots__junos_ospf_interface.snap  match_snapshots__junos_set_bgp_neighbor.snap  match_snapshots__junos_set_firewall_term.snap  match_snapshots__junos_set_ge_0_0_0_addr.snap  match_snapshots__junos_set_ge_0_0_1_subtree.snap  match_snapshots__junos_set_hostname.snap  match_snapshots__junos_set_static_route.snap  match_snapshots__junos_switch_vlan.snap  match_snapshots__junos_system_services.snap
crates/pycfgcut/: Cargo.toml  build.rs  pyproject.toml
crates/pycfgcut/src/: lib.rs
crates/pycfgcut/tests/: test_smoke.py
docs/: book.toml  releasing.md
docs/src/: SUMMARY.md  ci.md  dialect_guidelines.md  diffing_configs.md  index.md  usage.md  (+1 more)
examples/: anonymize_output.py  basic_run.py  include_comments.py  multiple_matches.py  token_capture.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: matcher.rs  parser.rs
supply-chain/: config.toml
(+15 files in other folders)
