[package]
name = "cfgcut"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[features]
default = []
fuzzing = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.7", features = ["html_reports"] }
toml = "0.8"
insta = { version = "1", features = ["yaml"] }
