[package]
name = "cfgcut"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[features]
default = []
fuzzing = []

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
toml = { workspace = true }
insta = { workspace = true }
