[package]
name = "pycfgcut"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "pycfgcut"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py39", "macros"] }
cfgcut = { path = "../cfgcut", version = "0.1.0" }
serde_json = { workspace = true }
